--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
-    "time-formater": "^1.1.1"
+    "time-formater": "^1.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
