--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --harmony index.js",
+    "start": "nodemon --harmony index.js",
     "help": "nodemon --harmony helper.js"
   },
   "author": "sl",
