--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "pinyin": "^2.8.3",
     "time-formater": "^1.1.1",
     "uuid": "^3.3.2"
   },
